force-app/main/default/objects/IbdCourseAttempt__e.object
<CustomObject>
    <description>Inbound student course attempts, including active, completed and discontinued records</description>
    <fields>
        <fullName>Attendance_Mode__c</fullName>
        <label>Attendance Mode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendance_Type__c</fullName>
        <label>Attendance Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COO_Id__c</fullName>
        <label>COO Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Callista_Admission_Application_Id__c</fullName>
        <label>Callista Admission Application Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campus_Country__c</fullName>
        <description>Country of the course attempt primary campus</description>
        <label>Campus Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campus_Location_Description__c</fullName>
        <description>Location description of the course attempt primary campus</description>
        <label>Campus Location Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campus_Location_Type__c</fullName>
        <description>Location type of the course attempt primary campus</description>
        <label>Campus Location Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <description>Primary campus of the course attempt</description>
        <label>Campus</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commencement_Date__c</fullName>
        <label>Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Attempt_Status__c</fullName>
        <label>Course Attempt Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <description>Code of the course</description>
        <label>Course Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Requirements_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Course Requirements Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_Requirements_Completion_Date__c</fullName>
        <label>Course Requirements Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discontinuation_Code__c</fullName>
        <label>Discontinuation Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discontinuation_Reason__c</fullName>
        <label>Discontinuation Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discontinued_Date__c</fullName>
        <label>Discontinued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Student_Course_Year__c</fullName>
        <description>Estimated year of the course the student is up to in the course attempt. Loosely derived within Callista.</description>
        <label>Estimated Student Course Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event_Type</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Category_Code__c</fullName>
        <label>Fee Category Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Payment_Option_Description__c</fullName>
        <label>Fee Payment Option Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Payment_Option_End_Date__c</fullName>
        <label>Fee Payment Option End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_Payment_Option_Start_Date__c</fullName>
        <label>Fee Payment Option Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fee_Payment_Option__c</fullName>
        <label>Fee Payment Option</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPA__c</fullName>
        <description>A grade point average is a number representing the average value of the accumulated final grades earned in courses over time. More commonly called a GPA, a student&apos;s grade point average is calculated by adding up all accumulated final grades and dividing that figure by the number of grades awarded.
Ranges usually from 1.0 to 5.0</description>
        <label>GPA</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Granted_Advanced_Standing_CP__c</fullName>
        <defaultValue>-1</defaultValue>
        <label>Granted Advanced Standing CP</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Int_Comments__c</fullName>
        <label>Intermission Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Int_End_Date__c</fullName>
        <label>Intermission End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Int_Future_Comments__c</fullName>
        <label>Intermission Future Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Int_Future_End_Date__c</fullName>
        <label>Intermission Future End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Int_Future_Start_Date__c</fullName>
        <label>Intermission Future Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Int_Future_Voluntary_Ind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intermission Future Voluntary Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Int_Start_Date__c</fullName>
        <label>Intermission Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Int_Voluntary_Ind__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intermission Voluntary Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JRG_Ind__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Job Ready Graduate indicator - student has commonwealth assistance (CSP, HECS-HELP, FEE-HELP) and has a derived commencement date 2022 and beyond.</description>
        <label>JRG Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <label>Last Modified By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Datetime__c</fullName>
        <label>Last Modified Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nominated_Completion_Period__c</fullName>
        <label>Nominated Completion Period</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nominated_Completion_Year__c</fullName>
        <label>Nominated Completion Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Person_ID__c</fullName>
        <description>Callista Person Id for the person/student</description>
        <label>Person ID</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Application_Id__c</fullName>
        <label>Portal Application Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Student Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Student_Type__c</fullName>
        <description>Indicate the type of student of the course attempt. Ie. International, Domestic or Unspecified</description>
        <label>Student Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>Version of a course</description>
        <label>Version</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WAM__c</fullName>
        <description>The Weighted Average Mark (WAM) is a more precise measure of your academic performance than the Grade Point Average. This is because we base the calculation on your actual marks and the year level of each unit. The WAM is the average mark you achieve across all completed units in a course.</description>
        <label>WAM</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <label>Inbound Course Attempt</label>
    <pluralLabel>Inbound Course Attempts</pluralLabel>
</CustomObject>